# tradingagent

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
cli/: __init__.py  main.py
tests/: test_alpha.py  test_assistant.py  test_ledger.py  test_pipeline.py
vnquant/: __init__.py  default_config.py  pipeline.py
vnquant/alpha/: __init__.py  ic.py  library.py  multiple_testing.py  neutralizer.py  operators.py  research.py
vnquant/assistant/: __init__.py  chunking.py  embeddings.py  generator.py  knowledge.py  rag.py  vector_store.py
vnquant/audit/: __init__.py  checkers.py
vnquant/backtest/: __init__.py  engine.py
vnquant/execution/: __init__.py  ledger.py  sor.py
vnquant/risk/: __init__.py  construction.py  factor_model.py
